<resources>
    <string name="app_name">Tokaji Wines</string>
    <string name="name">Name</string>
    <string name="title_news">News</string>
    <string name="title_wines">Wines</string>
    <string name="title_wineyards">Producers</string>
    <string name="title_events">Events</string>
    <string name="title_map">Map</string>
    <string name="title_tour">Guide</string>
    <string name="title_settings">Settings</string>
    <string name="search">Search</string>
    <string name="price">Price</string>
    <string name="go_to_apk">Go to application</string>
    <string name="description">Description</string>
    <string name="cannot_connect">Cannot connect to the Internet</string>
    <string name="not_working">Not working yet</string>
    <string name="app_version">Aplication version:</string>
    <string name="developers">Developers</string>
    <string name="version_problem">Cannot get version name</string>
    <string name="cancel">Cancel</string>
    <string name="downloading_content">Downloading content</string>
    <string name="checking_database">Downloading database</string>
    <string name="exit_msg">Please click BACK again to exit</string>
    <string name="no_results">No results for selected parameters</string>
    <string name="loading">Loading...</string>
    <string name="loading_search">Loading search results...</string>
    <string name="loading_news">Loading news data...</string>
    <string name="loading_wine">Loading wine data...</string>
    <string name="loading_wines">Loading wines data...</string>
    <string name="loading_producer">Loading producer data...</string>
    <string name="loading_producers">Loading producers data...</string>
    <string name="loading_near">Loading near places...</string>
    <string name="loading_hotel">Loading hotel data...</string>
    <string name="loading_hotels">Loading hotels data...</string>
    <string name="loading_restaurant">Loading restaurant data...</string>
    <string name="loading_restaurants">Loading restaurants data...</string>
    <string name="menu_news">News</string>
    <string name="menu_wines">Wines</string>
    <string name="menu_wineyards">Producers</string>
    <string name="menu_map">Find near on map</string>
    <string name="menu_tour">Guide around Tokaj</string>
    <string name="menu_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="news_details_date">Date of this event:</string>
    <string name="wine_details_available_manufacturer">Available from the manufacturer</string>
    <string name="wine_year">Year</string>
    <string name="wine_search">Searching options</string>
    <string name="wine_all">All</string>
    <string name="wine_color">Color</string>
    <string name="wine_color_white">White</string>
    <string name="wine_color_pink">Pink</string>
    <string name="wine_color_red">Red</string>
    <string name="wine_taste">Taste</string>
    <string name="wine_taste_dry">Dry</string>
    <string name="wine_taste_semidry">Semidry</string>
    <string name="wine_taste_semisweet">Semisweet</string>
    <string name="wine_taste_sweet">Sweet</string>
    <string name="wine_taste_sparkling">Sparkling</string>
    <string name="wine_type">Type</string>
    <string name="wine_strain">Strain</string>
    <string name="wine_price_range">Price range</string>
    <string name="wine_produder">Producer</string>
    <string name="any">Any (touch to choose)</string>
    <string name="dialog_wine_taste">Select taste</string>
    <string name="dialog_wine_type">Select type</string>
    <string name="dialog_wine_strain">Select strain</string>
    <string name="dialog_wine_producer">Select producer</string>
    <string name="dialog_wine_year">Select year</string>
    <string name="dialog_wine_price">Select price range</string>
    <string name="wine_available">Available from</string>
    <string name="address">Address:</string>
    <string name="opening_hours">Opening hours:</string>
    <string name="phone_nb">Phone number:</string>
    <string name="show_more">Show more</string>
    <string name="users_reviews">Reviews</string>
    <string name="all_wines_available">all wines</string>
    <string name="here_u_are">Here You are</string>
    <string name="distance">Distance: </string>
    <string name="duration">\nDuration: </string>
    <string name="duration_item">Duration: </string>
    <string name="range">Range: </string>
    <string name="preffered_tours">Pick from preffered tours!</string>
    <string name="here_u_started">Here You started</string>
    <string name="navigation_to">Navigation to: </string>
    <string name="places_near">Places near: </string>
    <string name="no_points">No points</string>
    <string name="route_to">Route to</string>
    <string name="check_route">Do You want to check route?</string>
    <string name="cancel_tour">Hide tour</string>
    <string name="no_google_services_location_title">No permission for location service</string>
    <string name="no_google_services_location">Would You like to allow localization Your device now? </string>
     <string name="no_google_services_location_disabled">Localization service disabled, turn it on to use this feature </string>
    <string name="please_wait">Please wait ...</string>
    <string name="acquiring_position">Acquiring position ...</string>
    <string name="curiosities">Curiosities</string>
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="history">History of the area</string>
    <string name="points_of_interest">Points of interest</string>
    <string name="about_wine">What you should know about wine</string>
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Enable notifications</string>
    <string name="vibrations_only">Vibrations only</string>
    <string name="general_settings">General settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="polish">Polish</string>
    <string name="currency">Currency</string>
    <string name="currency_polish">PLN</string>
    <string name="currency_euro">€</string>
    <string name="distance_measure">Distance measure</string>
    <string name="distance_measure_km">km</string>
    <string name="distance_measure_miles">miles</string>
    <string name="gps">GPS</string>
    <string name="application_range">Application range</string>
    <string name="mobile_data">Mobile data</string>
    <string name="contact">Contact</string>
    <string name="about_the_application">About the application</string>
    <string name="dialog_title_language">Select application language: </string>
    <string name="dialog_title_currency">Select currency in application: </string>
    <string name="dialog_title_measure">Select distance measure in application: </string>
    <string name="dialog_title_range">Select distance range in application: </string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus et lectus eget leo mattis tristique ut at tortor. Phasellus tempus nibh quis magna efficitur luctus sed non nulla. Cras et magna eu nisl fringilla malesuada. Nulla turpis justo, posuere in porta eget, mattis eu orci. Fusce sollicitudin sapien nisl. Proin elit velit, posuere in bibendum sit amet, auctor quis lacus. Aliquam vitae luctus sapien. Aenean laoreet eros non nisl vulputate luctus. Phasellus porttitor massa vel quam molestie, vitae lobortis sapien feugiat. Aliquam posuere mi non mi sagittis ultricies. Nam efficitur non lectus nec lacinia. Fusce pharetra, diam at sagittis gravida.</string>
    <string name="UrlNearLatLngPlace">http://tokajiwines.me/services/nearPlaces.php</string>
    <string name="UrlEventDetails">http://tokajiwines.me/services/newsdetail.php</string>
    <string name="UrlHotelDetails">http://tokajiwines.me/services/hotelDetails.php</string>
    <string name="UrlProducerDetails">http://tokajiwines.me/services/producerDetails.php</string>
    <string name="UrlProducerImages">http://tokajiwines.me/services/producerImages.php</string>
    <string name="UrlRestaurantDetails">http://tokajiwines.me/services/restaurantDetails.php</string>
    <string name="UrlNewsList">http://tokajiwines.me/services/news.php</string>
    <string name="UrlProducersList">http://tokajiwines.me/services/producers.php</string>
    <string name="UrlHotelsList">http://tokajiwines.me/services/hotels.php</string>
    <string name="UrlRestaurantsList">http://tokajiwines.me/services/restaurants.php</string>
    <string name="UrlWineFilter">http://tokajiwines.me/services/wineFilter.php</string>
    <string name="UrlWinesList">http://tokajiwines.me/services/wines.php</string>
    <string name="UrlWineDetails">http://tokajiwines.me/services/wineDetails.php</string>
    <string name="UrlWinesGridViewList">http://tokajiwines.me/services/winesGridView.php</string>
    <string name="UrlRandomWine">http://tokajiwines.me/services/randomWine.php</string>
    <string name="UrlAllImagesDownload">http://tokajiwines.me/services/downloadImages.php</string>
    <string name="UrlDownloadDatabase">http://tokajiwines.me/services/database.php</string>
    <string name="UrlDatabase">http://tokajiwines.me/databases/</string>
    <string name="UrlSearchItems">http://tokajiwines.me/services/searchItems.php</string>
    <string name="UrlSearchResults">http://tokajiwines.me/services/searchResults.php</string>
    <string name="title_activity_wine">WineActivity</string>
    <string name="Username">zpi</string>
    <string name="Password">OEmGie</string>
    <string name="gabriel_kurczewski">Gabriel Kurczewski - content provider</string>
    <string name="gabriel_kurczewski_email">gabriel.kurczewski@gmail.com</string>
    <string name="krzysztof_wasko">Krzysztof Wasko - originator</string>
    <string name="krzysztof_wasko_email">k.wasko@mikrozet.pl</string>
    <string name="paulina_konieczna">Paulina Konieczna - programmer</string>
    <string name="paulina_konieczna_email">konieczna.paulina00@gmail.com</string>
    <string name="pawel_cyron">Pawel Cyron - programmer</string>
    <string name="pawel_cyron_email">paul.cyron1@gmail.com</string>
    <string name="tomasz_kluza">Tomasz Kluza - programmer</string>
    <string name="tomasz_kluza_email">kluza.tomasz@gmail.com</string>
    <string name="wojciech_klimczyk">Wojciech Klimczyk - programmer</string>
    <string name="wojciech_klimczyk_email">boberjunior@gmail.com</string>
    <string name="paulina_malinka">Paulina Malinka - graphic designer</string>
    <string name="paulina_malinka_email">paulina.teresa.malinka@gmail.com</string>
    <string name="search_hint">Type name to search</string>
    <string name="title_activity_searchable">SearchableActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab_tours">Tours</string>
    <string name="map_offline">You shoud have an Internet connection to see map.</string>
    <string name="cant_load_wine">Cannot load wine data</string>
    <string name="cant_load_producer">Cannot load producer data</string>
    <string name="cant_load_hotel">Cannot load hotel data</string>
    <string name="cant_load_restaurant">Cannot load restaurant data</string>
    <string name="cant_load_news">Cannot load news data</string>
    <string name="cant_load_search">Cannot load search result</string>
</resources>