<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/curiosities_bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/guide_curiosities_history"
        style="@style/ItemGuideText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/divider_item"
        android:text="@string/history" />

    <TextView
        android:id="@+id/guide_curiosities_points"
        style="@style/ItemGuideText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/points_of_interest" />

    <TextView
        android:id="@+id/guide_curiosities_about"
        style="@style/ItemGuideText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_wine" />

</LinearLayout>