<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/item_restaurant_image"
        android:layout_width="@dimen/item_lists_height"
        android:layout_height="@dimen/item_lists_height"
        android:layout_margin="5dp"
        android:src="@drawable/no_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:gravity="left"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/item_restaurant_name"
            style="@style/ItemText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ItemTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_nb" />

            <TextView
                android:id="@+id/item_restaurant_phone"
                style="@style/ItemTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/ItemTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <TextView
                android:id="@+id/item_restaurant_address"
                style="@style/ItemTextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>