<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/activity_news_details_name"
            style="@style/DetailsHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Title" />

        <ImageView
            android:id="@+id/activity_news_details_image"
            android:layout_width="@dimen/details_image_height"
            android:layout_height="@dimen/details_image_width"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:src="@drawable/placeholder_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DetailsHeader.BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wine_available" />

                <TextView
                    android:id="@+id/activity_wine_available"
                    style="@style/DetailsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Producer"
                    android:textSize="14dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DetailsHeader.BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wine_taste" />

                <TextView
                    android:id="@+id/activity_wine_taste"
                    style="@style/DetailsHeader.NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DetailsHeader.BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wine_type" />

                <TextView
                    android:id="@+id/activity_wine_type"
                    style="@style/DetailsHeader.NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DetailsHeader.BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wine_strain" />

                <TextView
                    android:id="@+id/activity_wine_strain"
                    style="@style/DetailsHeader.NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DetailsHeader.BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wine_year" />

                <TextView
                    android:id="@+id/activity_wine_year"
                    style="@style/DetailsHeader.NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    style="@style/DetailsHeader.BoldText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/activity_wine_price"
                    style="@style/DetailsHeader.NormalText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/activity_wine_description"
            style="@style/DetailsHeader.NormalText.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/DetailsHeader.Bookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/users_reviews" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/activity_producer_details_review"
                style="@style/DetailsHeader.NormalText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Great!" />

            <TextView
                android:id="@+id/activity_producer_details_review_user"
                style="@style/DetailsHeader.NormalText.Small"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/activity_producer_details_review"
                android:gravity="right"
                android:paddingRight="30dp"
                android:text="John Winter" />
        </RelativeLayout>
    </LinearLayout>


</ScrollView>